[package]
name = "gilboost"
version = "0.2.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.16"
crossbeam-channel = "0.5"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde_json = "1.0"
priority-queue = "1.3"

[lib]
name = "gilboost"
crate-type = ["cdylib"]