[package]
name = "gilboost"
version = "0.1.0"
edition = "2021"

[lib]
name = "gilboost"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
gilboost-core = { path = "../gilboost-core" }